# SlopRadar

./: .gitignore  README.md
app/: main.py
app/static/: index.html  script.js  style.css
data-generation/: generate_ai_slop_groq.py
raid/: results.json
scrapes/: human_text.jsonl
scraping/: run_gathering.py  scrape_books.py  scrape_news.py  scrape_wikibooks.py  scrape_wikipedia.py
scripts/: publish_to_hf.py
training/: pyproject.toml
training/src/: eval_raid.py  load_checkpoint.py  predict.py  token_length.py  train.py  vis_train.py
