[project]
name = "training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.4"
dependencies = [
    "accelerate>=0.26.0",
    "datasets>=4.4.0",
    "evaluate>=0.4.6",
    "matplotlib>=3.10.7",
    "nltk>=3.9.2",
    "numpy>=2.3.4",
    "peft>=0.18.0",
    "rouge-score>=0.1.2",
    "scikit-learn>=1.7.2",
    "sentencepiece>=0.2.1",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]
